Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Watched Subcomponents
JDK
JDK-8268021
[lworld] [AArch64] fix support for InlineTypeReturnedAsFields
Log In
Resolved
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P4
Fix Version/s:
repo-valhalla
Affects Version/s:
repo-valhalla
Component/s:
hotspot
Labels:
lw3
lworld
valhalla
Subcomponent:
runtime
CPU:
aarch64
Description
There is some code to implement this from the original AArch64 port but it doesn't work.
Attachments
Issue Links
links to
Commit
openjdk/valhalla/21090e04
Review
openjdk/valhalla/461
Activity
People
Assignee:
Nick Gasson
Reporter:
Nick Gasson
Votes
:
0
Vote for this issue
Watchers:
1
Start watching this issue
Dates
Created:
2021-06-01 03:00
Updated:
2021-06-25 02:18
Resolved:
2021-06-25 02:18