8268021: [lworld] [AArch64] fix support for InlineTypeReturnedAsFields

The code to support this on AArch64 was already mostly written but
untested or bit-rotted. This patch also contains the allocation
optimisation to MacroAssembler::store_inline_type_fields_to_buf() from
JDK-8263067.