src/hotspot/cpu/aarch64/interp_masm_aarch64.cpp
@@ -793,12 +793,10 @@ void InterpreterMacroAssembler::remove_activation(
 
     blr(rscratch1);
 
-    // call above kills the value in r1. Reload it.
-    ldr(r1, Address(rfp, frame::interpreter_frame_sender_sp_offset * wordSize));
+    // call above kills sender esp in rscratch2. Reload it.
+    ldr(rscratch2, Address(rfp, frame::interpreter_frame_sender_sp_offset * wordSize));
     bind(skip);
   }
-
-
 
   // restore sender esp
   mov(esp, rscratch2);
