src/hotspot/cpu/aarch64/sharedRuntime_aarch64.cpp
@@ -356,18 +356,15 @@ int SharedRuntime::java_calling_convention(const BasicType *sig_bt,
 }
 
 
-// const uint SharedRuntime::java_return_convention_max_int = Argument::n_int_register_parameters_j+1;
-const uint SharedRuntime::java_return_convention_max_int = 6;
+const uint SharedRuntime::java_return_convention_max_int = Argument::n_int_register_parameters_j;
 const uint SharedRuntime::java_return_convention_max_float = Argument::n_float_register_parameters_j;
 
 int SharedRuntime::java_return_convention(const BasicType *sig_bt, VMRegPair *regs, int total_args_passed) {
 
-  // Create the mapping between argument positions and
-  // registers.
-  // r1, r2 used to address klasses and states, exclude it from return convention to avoid colision
+  // Create the mapping between argument positions and registers.
 
   static const Register INT_ArgReg[java_return_convention_max_int] = {
-     r0 /* j_rarg7 */, j_rarg6, j_rarg5, j_rarg4, j_rarg3, j_rarg2
+    r0 /* j_rarg7 */, j_rarg6, j_rarg5, j_rarg4, j_rarg3, j_rarg2, j_rarg1, j_rarg0
   };
 
   static const FloatRegister FP_ArgReg[java_return_convention_max_float] = {
@@ -388,7 +385,6 @@ int SharedRuntime::java_return_convention(const BasicType *sig_bt, VMRegPair *re
         regs[i].set1(INT_ArgReg[int_args]->as_VMReg());
         int_args ++;
       } else {
-        // Should we have gurantee here?
         return -1;
       }
       break;
@@ -423,7 +419,7 @@ int SharedRuntime::java_return_convention(const BasicType *sig_bt, VMRegPair *re
       break;
     case T_DOUBLE:
       assert((i + 1) < total_args_passed && sig_bt[i + 1] == T_VOID, "expecting half");
-      if (fp_args < Argument::n_float_register_parameters_j) {
+      if (fp_args < SharedRuntime::java_return_convention_max_float) {
         regs[i].set2(FP_ArgReg[fp_args]->as_VMReg());
         fp_args ++;
       } else {
@@ -3389,11 +3385,12 @@ BufferedInlineTypeBlob* SharedRuntime::generate_buffered_inline_type_adapter(con
   int pack_fields_jobject_off = __ offset();
   // Resolve pre-allocated buffer from JNI handle.
   // We cannot do this in generate_call_stub() because it requires GC code to be initialized.
-  __ ldr(r0, Address(r13, 0));
+  Register Rresult = r14;  // See StubGenerator::generate_call_stub().
+  __ ldr(r0, Address(Rresult));
   __ resolve_jobject(r0 /* value */,
                      rthread /* thread */,
                      r12 /* tmp */);
-  __ str(r0, Address(r13, 0));
+  __ str(r0, Address(Rresult));
 
   int pack_fields_off = __ offset();
 
@@ -3458,6 +3455,7 @@ BufferedInlineTypeBlob* SharedRuntime::generate_buffered_inline_type_adapter(con
       continue;
     }
     int off = sig_vk->at(i)._offset;
+    assert(off > 0, "offset in object should be positive");
     VMRegPair pair = regs->at(j);
     VMReg r_1 = pair.first();
     VMReg r_2 = pair.second();
@@ -3467,8 +3465,8 @@ BufferedInlineTypeBlob* SharedRuntime::generate_buffered_inline_type_adapter(con
     } else if (bt == T_DOUBLE) {
       __ ldrd(r_1->as_FloatRegister(), from);
     } else if (bt == T_OBJECT || bt == T_ARRAY) {
-       assert_different_registers(r0, r_1->as_Register());
-       __ load_heap_oop(r_1->as_Register(), from);
+      assert_different_registers(r0, r_1->as_Register());
+      __ load_heap_oop(r_1->as_Register(), from);
     } else {
       assert(is_java_primitive(bt), "unexpected basic type");
       assert_different_registers(r0, r_1->as_Register());
@@ -3479,6 +3477,11 @@ BufferedInlineTypeBlob* SharedRuntime::generate_buffered_inline_type_adapter(con
     j++;
   }
   assert(j == regs->length(), "missed a field?");
+
+  if (StressInlineTypeReturnedAsFields) {
+    __ load_klass(r0, r0);
+    __ orr(r0, r0, 1);
+  }
 
   __ ret(lr);
 
